<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.start.sign_in.SignInFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_hand"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/hello"
        app:layout_constraintEnd_toStartOf="@+id/materialTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="100dp"
        android:layout_marginStart="20dp"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/materialTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/text_welcome"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:layout_marginStart="20dp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/iv_hand"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/materialTextView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/text_sign_in_description"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialTextView" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_sign_in_with_email"
        app:layout_constraintBottom_toTopOf="@+id/et_email"
        app:layout_constraintStart_toStartOf="@+id/et_email"
        android:layout_marginBottom="8dp"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_email"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/text_test_email"
        android:paddingHorizontal="14dp"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_next"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:background="@drawable/blocked_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_email"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20dp"
        android:text="@string/text_next"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textAllCaps="false"
        android:enabled="false"/>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_else_sign_in"
        app:layout_constraintBottom_toTopOf="@+id/btn_sign_in_with_yandex"
        app:layout_constraintEnd_toEndOf="@+id/btn_sign_in_with_yandex"
        app:layout_constraintStart_toStartOf="@+id/btn_sign_in_with_yandex"
        android:layout_marginBottom="16dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_sign_in_with_yandex"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_margin="20dp"
        android:background="@drawable/button_sign_in_with_yandex_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/text_sign_in_with_yandex"
        android:textAllCaps="false"
        android:textSize="17sp"/>

</androidx.constraintlayout.widget.ConstraintLayout>