<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.fragments.main.profile.ProfileFragment"
        android:paddingHorizontal="20dp"
        android:paddingTop="10dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_client_card"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="170dp"
            android:layout_height="135dp"
            android:layout_marginTop="16dp"
            android:outlineAmbientShadowColor="@color/transparent"
            android:outlineSpotShadowColor="@color/transparent"
            app:cardCornerRadius="100dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialTextView9"
            tools:targetApi="p"
            android:background="@color/grey_F5">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_profilePhoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:layout_gravity="center"
                android:src="@drawable/ic_camera" />
        </androidx.cardview.widget.CardView>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView10"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/text_client_card_description"
            android:textColor="@color/text_grey"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_name"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/text_name"
            android:inputType="textPersonName"
            android:paddingHorizontal="14dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialTextView10" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_midname"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/text_midname"
            android:inputType="textPersonName"
            android:paddingHorizontal="14dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_name" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_lastname"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/text_lastname"
            android:inputType="textPersonName"
            android:paddingHorizontal="14dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_midname" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_birthDate"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/edit_text_background"
            android:hint="@string/text_birth_date"
            android:inputType="date"
            android:paddingHorizontal="14dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_lastname" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spinner_sexOrientation"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/edit_text_background"
            android:entries="@array/sex_orientation"
            android:paddingStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_birthDate" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:src="@drawable/ic_drop_down"
            app:layout_constraintBottom_toBottomOf="@id/spinner_sexOrientation"
            app:layout_constraintEnd_toEndOf="@id/spinner_sexOrientation"
            app:layout_constraintTop_toTopOf="@id/spinner_sexOrientation" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_save"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/filled_btn"
            android:text="@string/text_save"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner_sexOrientation" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>