<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:motion="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/srl_analyzes"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.main.analyzes.AnalyzesFragment">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/constraintLayout4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="10dp">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:fitsSystemWindows="false"
            android:padding="0dp"
            app:elevation="0dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="56dp"
                motion:layout_scrollFlags="scroll|exitUntilCollapsed">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/materialTextView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="72dp"
                    android:text="@string/text_news"
                    android:textColor="@color/text_grey"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_news"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/materialTextView7"
                    tools:listitem="@layout/item_stock_or_news" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/materialTextView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/text_analyzes_catalog"
                    android:textColor="@color/text_grey"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/rv_news" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_categories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/materialTextView8"
                tools:itemCount="3"
                tools:listitem="@layout/item_category" />
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="66dp"
            android:background="@color/white">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_search"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_marginStart="20dp"
                android:background="@drawable/edit_text_background"
                android:drawableStart="@drawable/ic_loupe"
                android:drawablePadding="14dp"
                android:hint="@string/text_search_analyzes"
                android:paddingHorizontal="20dp"
                app:layout_goneMarginEnd="20dp"
                android:textColor="@color/black"
                android:textColorHint="@color/text_grey"
                android:textSize="16sp"
                app:iconifiedByDefault="false"
                app:layout_constraintEnd_toStartOf="@id/tv_cancel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_cancel"
                android:layout_width="wrap_content"
                android:layout_height="56dp"
                android:gravity="center"
                android:paddingHorizontal="16dp"
                android:text="@string/text_cancel"
                android:textColor="@color/second_blue"
                android:textSize="14sp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/et_search"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/btn_clear_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="14dp"
                android:src="@drawable/ic_close"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/et_search"
                app:layout_constraintEnd_toEndOf="@+id/et_search"
                app:layout_constraintTop_toTopOf="@+id/et_search" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_analyzes"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
            tools:itemCount="2"
            tools:listitem="@layout/item_analysis" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_search_results"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:layout_marginTop="66dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:itemCount="10"
            tools:listitem="@layout/item_search_result" />



        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_cart"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp"
            android:background="@drawable/btn_go_to_cart">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_go_to_cart"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:background="@drawable/filled_btn"
                android:drawableStart="@drawable/ic_cart"
                android:drawablePadding="20dp"
                android:gravity="start|center_vertical"
                android:paddingStart="20dp"
                android:text="@string/text_go_to_cart"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:outlineSpotShadowColor="@color/transparent"
                android:outlineAmbientShadowColor="@color/transparent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="RtlSymmetry"
                tools:targetApi="p" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_cart_sum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price_rub"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:translationZ="8dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintBottom_toBottomOf="@+id/btn_go_to_cart"
                app:layout_constraintEnd_toEndOf="@+id/btn_go_to_cart"
                app:layout_constraintTop_toTopOf="@+id/btn_go_to_cart" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>